[package]
name = "egui_clickpack_db"
description = "ClickpackDB integration for egui (public Geometry Dash clickpack archive)"
version = "0.4.0"
edition = "2021"
license = "GLWTPL OR Unlicense OR Apache-2.0 OR MIT"
documentation = "https://docs.rs/egui_clickpack_db"
homepage = "https://github.com/zeozeozeo/egui_clickpack_db"
repository = "https://github.com/zeozeozeo/egui_clickpack_db"
categories = ["gui"]
keywords = ["egui", "clickpackdb", "geometrydash", "archive", "ui"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29.1"
egui_extras = "0.29.1"
fuzzy-matcher = "0.3.7"
humansize = "2.1.3"
indexmap = { version = "2.6.0", features = ["serde"] }
log = "0.4.22"
open = "5.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip-extract = { version = "0.2.1", default-features = false, features = ["deflate"] }

[features]
default = []
live = []
