[package]
name = "egui_clickpack_db"
description = "ClickpackDB integration for egui (public Geometry Dash clickpack archive)"
version = "0.6.0"
edition = "2021"
license = "GLWTPL OR Unlicense OR Apache-2.0 OR MIT"
documentation = "https://docs.rs/egui_clickpack_db"
homepage = "https://github.com/zeozeozeo/egui_clickpack_db"
repository = "https://github.com/zeozeozeo/egui_clickpack_db"
categories = ["gui"]
keywords = ["egui", "clickpackdb", "geometrydash", "archive", "ui"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.31"
egui_extras = "0.31"
fuzzy-matcher = "0.3.7"
humansize = "2.1.3"
indexmap = { version = "2.9.0", features = ["serde"] }
log = "0.4"
open = "5.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip-extract = { version = "0.3.0", default-features = false }

[features]
default = []
live = []

[dev-dependencies]
eframe = "0.31"
